# warehouse-simulator-rust

./: .travis.yml  Cargo.toml
src/: checker.rs  lib.rs  line.rs  line_member.rs  main.rs  picker.rs
tests/fixtures/: pick_tickets.tsv  simple_line.json
