[package]
name = "warehouse_simulator"
version = "0.1.0"
authors = ["michael groble <mike@groble.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"